# CHIP-8_VM

./: CMakeLists.txt  README.md
src/: CHIP8.cpp  CHIP8.hpp  CHIP8_GUI.cpp  CHIP8_GUI.hpp  CHIP8_Mediator.cpp  CHIP8_Mediator.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp
